# spanformat-multilang

./: .gitignore  README.md
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/include/spanvalue/: bytes_fmt.hpp  codes.hpp  encoder.hpp  errors.hpp  float_fmt.hpp  format_config.hpp  proto_adapt.hpp  proto_json.hpp  quote.hpp  spanvalue.hpp  type_format.hpp  unicode_printable.hpp
cpp/test/: conformance_test.cpp  encoder_test.cpp
csharp/: Apstndb.SpanValue.sln  README.md
csharp/src/Apstndb.SpanValue/: Apstndb.SpanValue.csproj  BytesFmt.cs  Codes.cs  Encoder.cs  Errors.cs  FloatFmt.cs  FormatConfig.cs  Proto.cs  Quote.cs  SpanValue.cs  TypeFormat.cs
csharp/tests/Apstndb.SpanValue.Tests/: Apstndb.SpanValue.Tests.csproj  ConformanceTests.cs  EncoderTests.cs
docs/: CLIENT_INTEGRATION.md
examples/: .gitignore  README.md  bootstrap-emulator.py  setup-emulator.sh
examples/cpp/: CMakeLists.txt  README.md  query_format.cpp  vcpkg.json
examples/csharp/: Program.cs  QueryFormatExample.csproj
examples/java/: pom.xml
examples/java/src/main/java/com/github/apstndb/spanvalue/examples/: QueryFormatExample.java
examples/nodejs/: package-lock.json  package.json  query_format.mjs
examples/php/: README.md  composer.json  query_format.php
examples/python/: query_format.py  requirements.txt
examples/ruby/: Gemfile  query_format.rb
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
java/: README.md  pom.xml
java/src/main/java/com/github/apstndb/spanvalue/: BytesFmt.java  ClientTypeAdapter.java  EmptyNullStringException.java  EmptyTypeFQNException.java  FloatFmt.java  Gcvctor.java  MalformedWireException.java  MismatchedFieldsException.java  ProtoAccess.java  Quote.java  SpanValue.java  SpanValueException.java  TypeAnnotationCode.java  TypeCode.java  TypeFormat.java  UnexpectedComplexValueKindException.java  UnknownTypeException.java  ValueFormat.java
java/src/test/java/com/github/apstndb/spanvalue/: ClientTypeAdapterTest.java  ConformanceTest.java  EncoderTest.java
nodejs/: README.md  package.json
nodejs/lib/: bytes-fmt.js  client-type-adapter.js  codes.js  encoder.js  errors.js  float-fmt.js  format-config.js  index.js  proto.js  quote.js  type-format.js
nodejs/test/: conformance.test.js  test_encoder.js
php/: README.md  composer.json  phpunit.xml
php/src/: BytesFmt.php  ClientTypeAdapter.php  Codes.php  Encoder.php  Errors.php  FloatFmt.php  Proto.php  Quote.php  TypeFormat.php  ValueFormat.php  functions.php
php/tests/: ConformanceTest.php  EncoderTest.php  ErrorsTest.php  ProtoReflectionTest.php
python/: README.md  pyproject.toml
python/src/spanvalue/: __init__.py  bytes_fmt.py  codes.py  encoder.py  errors.py  float_fmt.py  format_config.py  proto.py  quote.py  type_format.py
python/tests/: test_conformance.py  test_encoder.py  test_errors.py
ruby/: README.md  spanvalue.gemspec
ruby/lib/: spanvalue.rb
ruby/lib/spanvalue/: bytes_fmt.rb  client_type_adapter.rb  codes.rb  encoder.rb  errors.rb  float_fmt.rb  format_config.rb  proto.rb  quote.rb  type_format.rb  version.rb
ruby/test/: test_conformance.rb  test_encoder.rb
rust/: Cargo.toml  README.md
rust/src/: bytes_fmt.rs  codes.rs  encoder.rs  errors.rs  float_fmt.rs  format_config.rs  lib.rs  proto_adapt.rs  protojson.rs  quote.rs  type_format.rs  types.rs
rust/tests/: conformance.rs  encoder.rs
spec/: ENCODER.md  FORMAT.md  PROTOFMT.md
testdata/: conformance.json
tools/gen-testdata/: go.mod  go.sum  main.go
