[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spanvalue"
version = "0.1.0-alpha.0"
description = "Format Cloud Spanner types and column values (human-readable, SQL literals, spanner-cli)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "apstndb" }]
keywords = ["spanner", "google-cloud", "formatting"]

[project.urls]
Homepage = "https://github.com/apstndb/spanformat-multilang"
Repository = "https://github.com/apstndb/spanformat-multilang"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/spanvalue"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
